<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:hint="@string/hintTitulo"
            android:inputType="textCapWords|textMultiLine"
            android:text="@string/etTitulo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:text="@string/lblAutor"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:hint="@string/hintAutor"
            android:inputType="textCapWords|textMultiLine"
            android:text="@string/etAutor"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/autor"
            android:text="@string/lblEditorial"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/editorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:hint="@string/hintEditorial"
            android:inputType="textCapWords|textMultiLine"
            android:text="@string/etEditorial"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editorial"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblISBN"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hitntISBN"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPaginas"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/paginas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:hint="@string/hintPaginas"
                android:inputType="number"
                android:text="@string/etPaginas" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAnio"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/anio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:hint="@string/hintAnio"
                android:inputType="number"
                android:text="@string/etAnio" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="false"
                android:text="@string/cbEbbok"/>

            <CheckBox
                android:id="@+id/leido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="false"
                android:text="@string/cbLeido"/>
        </LinearLayout>

        <RatingBar
            android:id="@+id/nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignWithParentIfMissing="true"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:rating="2"
            android:stepSize="0.1"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nota"
            android:text="@string/lblResumen"/>

        <EditText
            android:id="@+id/resumen"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView7"
            android:ems="10"
            android:inputType="textMultiLine"/>

    </RelativeLayout>
</ScrollView>

